<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true">

        <Space
            android:id="@+id/top_spacer"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_large"
            app:layout_constraintBottom_toTopOf="@id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_large" />

        <TextView
            android:id="@+id/date"
            style="@style/TextAppearance.SiTech.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/greeting"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/top_spacer"
            tools:text="July 19, 2022" />

        <TextView
            android:id="@+id/greeting"
            style="@style/TextAppearance.SiTech.HeadlineSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/point_balance_container"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/date"
            tools:text="Hi, Mohammad" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/point_balance_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:animateLayoutChanges="true"
            android:background="@drawable/circles_background"
            android:padding="@dimen/spacing_large"
            app:layout_constraintBottom_toTopOf="@id/steps_progress_label"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/greeting">

            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_huge"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/point_balance"
                    style="@style/TextAppearance.SiTech.HeadlineMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_headline_large"
                    tools:text="0" />

                <TextView
                    android:id="@+id/point_balance_label"
                    style="@style/TextAppearance.SiTech.LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_balance_label"
                    android:textAppearance="@style/TextAppearance.SiTech.LabelSmall" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/steps_progress_label"
            style="@style/TextAppearance.SiTech.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/steps_progress_label"
            app:layout_constraintBottom_toTopOf="@id/steps_progress_container"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/point_balance_container" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/steps_progress_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/daily_info_label"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/steps_progress_label">

            <ImageView
                android:id="@+id/steps_start_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_micro"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_walking"
                app:layout_constraintBottom_toTopOf="@id/steps_progress_bar"
                app:layout_constraintEnd_toStartOf="@id/steps_end_icon"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/steps_progress_thumb"
                android:layout_width="@dimen/steps_progress_thumb_width"
                android:layout_height="@dimen/steps_progress_thumb_height"
                android:animateLayoutChanges="true"
                android:background="@drawable/ic_running_flag"
                app:layout_constraintBottom_toTopOf="@id/steps_progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintHorizontal_bias="0.5">

                <TextView
                    android:id="@+id/total_steps"
                    style="@style/TextAppearance.SiTech.LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing_micro"
                    android:paddingEnd="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    tools:text="500" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/steps_end_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_micro"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_reward"
                app:layout_constraintBottom_toTopOf="@id/steps_progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/steps_start_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1" />

            <ProgressBar
                android:id="@+id/steps_progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="@dimen/steps_progress_width"
                android:layout_height="@dimen/steps_progress_height"
                android:layout_marginTop="@dimen/margin_micro"
                android:progressDrawable="@drawable/steps_progress_bar"
                app:layout_constraintBottom_toTopOf="@id/starting_steps"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/steps_progress_thumb"
                tools:max="1000"
                tools:progress="500" />

            <TextView
                android:id="@+id/starting_steps"
                style="@style/TextAppearance.SiTech.LabelSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/steps_progress_bar"
                tools:text="0" />

            <TextView
                android:id="@+id/goal_steps"
                style="@style/TextAppearance.SiTech.LabelSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/steps_progress_bar"
                tools:text="1000" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/daily_info_label"
            style="@style/TextAppearance.SiTech.LabelMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/daily_info_label"
            app:layout_constraintBottom_toTopOf="@id/daily_info_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/steps_progress_container" />

        <androidx.cardview.widget.CardView
            android:id="@+id/daily_info_container"
            android:layout_width="@dimen/info_card_width"
            android:layout_height="@dimen/info_card_height"
            android:layout_marginTop="@dimen/margin_small"
            android:backgroundTint="@color/cultured"
            app:cardCornerRadius="@dimen/info_card_corner_radius"
            app:cardElevation="@dimen/info_card_elevation"
            app:layout_constraintBottom_toTopOf="@+id/redeem"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/daily_info_label">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_large">

                <TextView
                    android:id="@+id/calories"
                    style="@style/TextAppearance.SiTech.HeadlineMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    app:layout_constraintBottom_toTopOf="@id/calories_label"
                    app:layout_constraintEnd_toStartOf="@id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Coming Soon" />

                <TextView
                    android:id="@+id/calories_label"
                    style="@style/TextAppearance.SiTech.BodySmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:text="@string/calories_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/calories" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="@dimen/info_card_divider_width"
                    android:layout_height="0dp"
                    app:dividerColor="@color/dark_silver"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/daily_steps"
                    style="@style/TextAppearance.SiTech.HeadlineMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    app:layout_constraintBottom_toTopOf="@id/daily_steps_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="78" />

                <TextView
                    android:id="@+id/daily_steps_label"
                    style="@style/TextAppearance.SiTech.BodySmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:text="@string/steps_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/divider"
                    app:layout_constraintTop_toBottomOf="@id/daily_steps" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/redeem"
            style="@style/Widget.SiTech.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/redeem"
            app:layout_constraintBottom_toTopOf="@id/bottom_spacer"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/daily_info_container" />

        <Space
            android:id="@+id/bottom_spacer"
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/redeem" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>